<resources>
    <string name="app_name">MovieApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie App</string>
    <string name="nav_header_subtitle">android.studio@movieapp.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- MOVIE APP by Julia -->
    <string name="hint_movie_title">Movie Title</string>
    <string name="hint_movie_creators">Movie Creators</string>
    <string name="hint_movie_actors">Movie Actors</string>
    <string name="hint_movie_genres">Movie Genres</string>
    <string name="hint_movie_description">Movie Description</string>

    <string name="text_movie_creators">Creators:</string>
    <string name="text_movie_actors">Actors:</string>
    <string name="text_movie_description">Story</string>

    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_add_something">Add Something</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Dummy Title</string>
    <string name="creators">Dummy Creators</string>
    <string name="actors">Dummy Actors</string>

    <string name="hello_watchlist_fragment">Watchlist fragment</string>
    <string name="welcome_to_movieapp">Welcome to MovieApp!</string>


</resources>